2009-01-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GdkX11.t
	* xs/GdkX11.xs: Wrap gdk_x11_atom_to_xatom and
	gdk_x11_atom_to_xatom_for_display.  Patch by chris.  (GNOME
	#566884)

2009-01-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkCellRenderer.t
	* xs/GtkCellRenderer.xs: In gtk2perl_cell_renderer_start_editing,
	make sure we return an object with a floating reference as is
	expected of a start_editing vfunc.  In the xsub for
	gtk_cell_renderer_start_editing and in the fallback START_EDITING
	xsub, make sure we sink any floating reference on the created cell
	editable in order to comply with the usual rule of not passing
	floating references on to Perl code.  Patch by Kevin Ryde.

2009-01-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkBuildable.xs: Declare all private functions as 'static' so
	that they aren't exported.

2009-01-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkSelection.xs: Fix the definition of the accessor macros
	for older gtk+.  Patch by Kevin Ryde.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkSelection.xs: Use gtk_selection_data_get_selection when
	available.  Also introduce convenience defines for the other
	GtkSelectionData accessors.  Patch by Emmanuel Rodriguez and
	muppet.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkPrintSettings.t
	* xs/GtkPrintSettings.xs: Wrap new API.  Patch by Emmanuel
	Rodriguez.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkPrintOperation.t
	* xs/GtkPrintOperation.xs: Wrap new API.  Patch by Emmanuel
	Rodriguez.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Use Glib::MakeHelper to create a
	'precompiled-headers' target that precompiles gtk2perl.h.  This
	speeds up the compilation of Gtk2 by 36% on my machine.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* AUTHORS
	* t/GtkStatusIcon.t
	* xs/GtkStatusIcon.xs: Wrap new GtkStatusIcon API.  Patch by
	Chris Sincock.
